--- a/about-us.html
+++ b/about-us.html
@@ -1009,12 +1009,35 @@
         });
     </script>
     <script>
+        function initMobileNavToggle() {
+            const nav = document.querySelector(".nav-sm");
+            const openBtn = document.querySelector(".nav-sm-toggler");
+            const closeBtn = document.querySelector(".close_btn");
+
+            if (!nav || !openBtn || !closeBtn) return;
+
+            openBtn.addEventListener("click", () => {
+                nav.classList.remove("-right-full");
+                nav.classList.add("right-0");
+            });
+
+            closeBtn.addEventListener("click", () => {
+                nav.classList.remove("right-0");
+                nav.classList.add("-right-full");
+            });
+        }
+    </script>
+
+    <!-- THEN your fetch script -->
+    <script>
         fetch('./header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header-container').innerHTML = data;
+                initMobileNavToggle();
             });
     </script>
+
 
 </body>
 
