--- a/header.html
+++ b/header.html
@@ -954,7 +954,7 @@
                                 <div
                                     class="flex xl:hidden flex-col  items-end cursor-pointer transition-all duration-500 ease-in-out nav-sm-toggler">
                                     <span class="block h-[3px] w-5 bg-white"></span>
-                                    <span class="block h-[3px] w-7.5 bg-white mt-2"></span>
+                                    <span class="block h-[3px] w-[30px] bg-white mt-2"></span>
                                     <span class="block h-[3px] w-5 bg-white mt-2"></span>
                                 </div>
                             </div>
