--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noorcapital</title>
-
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"   />
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -590,6 +591,198 @@
                     style="width: 50px; height: 50px; border-radius: 50%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);"></a>
         </div>
     </main>
+
+    <!-- footer -->
+    <footer id="footer" class="lg:pt-[115px] md:pt[75px] pt-[60px] relative bg-footer">
+        <div class="container">
+            <div
+                class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-6 2xl:gap-x-[95px] xl:gap-x-[70px] lg:x-15 sm:px-0 px-5 lg:gap-y-0 gap-y-10">
+                <div data-aos="fade-up" data-aos-duration="1000">
+                    <a class="flex items-center gap-1" href="index.html"><img src="./assets/img/footer-logo.png"
+                            width="140" style="max-width: 140px;" height="40" alt="img" /></a>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="1000">
+                    <h3 class="text-base font-semibold footer-head">Company</h3>
+                    <ul class="flex flex-col gap-[8px] pt-[8px] footer-link-screen">
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">About</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Why Noor Capital</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">License &amp; Regulations</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Media Center</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="1000">
+                    <h3 class="text-base font-semibold footer-head">Services</h3>
+                    <ul class="flex flex-col gap-[8px] pt-[8px] footer-link-screen">
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Global Financial Advisory</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Asset Management</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Investment Services</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Fund Administration</a></li>
+                    </ul>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="1000">
+                    <h3 class="text-base font-semibold footer-head">Products</h3>
+                    <ul class="flex flex-col gap-[8px] pt-[8px] footer-link-screen">
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Forex</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Commodities</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Indices</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Energies</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Shares CFDs</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Cash Equities</a></li>
+                    </ul>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="1000">
+                    <h3 class="text-base font-semibold footer-head">Trading</h3>
+                    <ul class="flex flex-col gap-[8px] pt-[8px] footer-link-screen">
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">MT4 Platform</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">MT5 Platform</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">MT4 Web Trader</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">MT5 Web Trader</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Funding &amp; Withdrawals</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Trading Conditions</a></li>
+                    </ul>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="1000">
+                    <h3 class="text-base font-semibold footer-head">Learning Hub</h3>
+                    <ul class="flex flex-col gap-[8px] pt-[8px] footer-link-screen">
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Learn to Invest</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Technical Analysis</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Video Tutorials</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Economic Reports</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Webinars</a></li>
+                        <li><a class="text-[#fff] transition-all duration-500 hover:ml-1 hover:text-[#be811a]"
+                                href="#">Workshops</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div
+                class="flex flex-col sm:flex-row sm:flex-wrap lg:cols-1 lg:justify-between items-center lg:gap-y-0 gap-y-5 gap-x-5 pt-5 mt-[30px] 2xl:mt-[49px] border-top-gr sm:px-0 border-opacity-20 sm:mx-0 mx-5">
+                <div class="achivements flex justify-center sm:justify-start flex-1 w-2/4 lg:w-auto">
+                    <div class="achive_wrapper">
+                        <div class="swiper footer-swiper achive_swiper_wrapper" dir="ltr">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <div>
+                                            <img alt="Award 2019" loading="lazy" width="200" height="183"
+                                                decoding="async" data-nimg="1" style="color: transparent;"
+                                                src="./assets/img/awards_2019.original.png" />
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <div>
+                                            <img alt="Award 2020" loading="lazy" width="200" height="183"
+                                                decoding="async" data-nimg="1" style="color: transparent;"
+                                                src="./assets/img/award_2020.original.png" />
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <div>
+                                            <img alt="Award 2019" loading="lazy" width="200" height="183"
+                                                decoding="async" data-nimg="1" style="color: transparent;"
+                                                src="./assets/img/awards_2019.original.png" />
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#">
+                                        <div>
+                                            <img alt="Award 2020" loading="lazy" width="200" height="183"
+                                                decoding="async" data-nimg="1" style="color: transparent;"
+                                                src="./assets/img/award_2020.original.png" />
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-1 sm:w-2/4 lg:w-auto min-w-[200px]">
+                    <ul class="flex items-center justify-center sm:justify-end lg:justify-center gap-7.5 footer-screen-extra text-white wow fadeInRight"
+                        data-wow-delay=".3s">
+                        <a target="_blank" class="" href="#"><img src="./assets/img/fb.png" width="10" height="10"
+                                alt="img" /></a>
+                        <a target="_blank" class="" href="#"><img src="./assets/img/x.png" width="20" height="20"
+                                alt="img" /></a>
+                        <a target="_blank" class="" href="#"><img src="./assets/img/insta.png" width="20" height="20"
+                                alt="img" /></a>
+                        <a target="_blank" class="" href="#"><img src="./assets/img/youtube.png" width="30" height="30"
+                                alt="img" /></a>
+                        <a target="_blank" class="" href="#"><img src="./assets/img/linkdin.png" width="20" height="20"
+                                alt="img" /></a>
+                    </ul>
+                </div>
+                <div class="flex-1 w-full sm:w-2/4 lg:w-auto">
+                    <ul class="flex w-full sm:w-auto flex-wrap sm:flex-nowrap items-center justify-center lg:justify-end col-span-full gap-5 2xl:gap-7.5 footer-screen-extra text-white wow fadeInRight underline underline-offset-2 footer-contact-screen"
+                        data-wow-delay=".3s">
+                        <li><a class="font-footer whitespace-nowrap" href="#">Terms &amp; Condition</a></li>
+                        <li><a class="font-footer whitespace-nowrap" href="#">Privacy Policy</a></li>
+                        <li><a class="font-footer whitespace-nowrap" href="#">Contact Us</a></li>
+                        <li><a class="font-footer whitespace-nowrap" href="#">Fraud Warning</a></li>
+                        <li><a class="font-footer whitespace-nowrap" href="#">Cookies Policy</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="pt-[15px] overflow-x-hidden sm:px-0 px-5">
+                <div
+                    class="flex sm:flex-row flex-col items-center justify-between pt-[15px] pb-[30px] 2xl:pb-[45px] border-opacity-20">
+                    <div class="text-[#ffffff] wow fadeInLeft footer-description html-content" data-wow-delay=".3s">
+                        <p data-block-key="yjm7g">
+                            <b>Risk Disclosure:</b> Foreign Exchange (Forex, FX) and Contracts for Difference (CFDs) on
+                            Currencies, Commodities, Indices, or Equities are all margin-traded products and thus
+                            inherently carry a high-risk
+                            level that may not be suitable for all investors. Before deciding to trade FX/CFD
+                            instruments offered by Noor Capital PSC, you should carefully consider your objectives,
+                            financial situation, needs, and
+                            experience level. You should not trade any margined product unless you fully understand all
+                            the risks involved and possess sufficient resources in case of adverse movement in a
+                            product's price. You will then
+                            be able to meet the financial obligations required of you concerning margin payments and
+                            losses. See <a href="#" id="328" linktype="page">Risk Disclosure</a> for further
+                            details
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex justify-center py-5 copy-right_border">
+                <div class="text-[#ffffff] footer-screen-extra font-footer html-content">
+                    <p data-block-key="e2cqn"><a href="#">Noor Capital PSC</a> , Est. 2005. Regulated by the SCA in the
+                        UAE</p>
+                </div>
+            </div>
+        </div>
+               
+    </footer>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const fadeElements = document.querySelectorAll(".fadeUp");
@@ -673,7 +866,21 @@
                 initMobileNavToggle();
             });
     </script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".footer-swiper", {
+            speed: 1000,
+            loop: true,
+            autoplay: {
+                delay: 4000,
+                disableOnInteraction: false,
+            },
+            spaceBetween: 10,
+            slidesPerView: 3,
 
+        });
+    </script>
 </body>
 
 </html>
